k8s/monitoring-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: web
